# ActorRecogniser

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml  build_log.txt  dockerfile
backend/src/: main.rs
frontend/: README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend-old/: tailwind.config.js  tsconfig.app.json
frontend-old/src/: router.ts
frontend-old/src/Pages/: identifier.vue
frontend-old/src/assets/: base.css
frontend-old/src/components/: coffee.vue
frontend-old/src/types/: index.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: globals.css  layout.tsx  loading.tsx  manifest.json  page.tsx
frontend/components/: Button.tsx  Card.tsx  ClipRevealText.tsx  Footer.tsx  IconButton.tsx  InstallPrompt.tsx  SmoothScrollWrapper.tsx
frontend/components/app/: ActorDisplay.tsx  ActorMedia.tsx  AppCard.tsx  FilterPopup.tsx  ImageUploader.tsx  MediaDisplay.tsx  SortPopup.tsx
frontend/components/landing/: FinalCta.tsx  FirstSection.tsx  FirstSectionAnimations.tsx  Hero.tsx  StatsSection.tsx  StepsSection.tsx
frontend/constants/: index.ts
frontend/hooks/: UseWindowDimensions.tsx
frontend/lib/: schemas.ts  stores.ts  utils.ts
frontend/public/videos/: hero.webm  step_1.webm  step_2.webm  step_3.webm
frontend/server/: trpc.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/Pages/: Identifier.vue  Landing.vue  landing.vue
frontend/src/assets/: base.css  main.css
frontend/trpc/: Provider.tsx
src/: main.rs
(+33 files in other folders)
