[package]
name = "actor_recogniser"
version = "0.1.0"
edition = "2021"

[dependencies]
urlencoding = "2.1"
actix-web = "4.3.1"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = "1.26.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
futures-util = "0.3.31"
actix-multipart = "0.7.2"
aws-sdk-rekognition = "1.78.0"
aws-config = "1.8.1"
dotenvy = "0.15.7"
